# magisterskaya

./: .env.example  .gitignore  README.md  coverage.json  data_samples.py  gen_strategies.py  pyproject.toml  requirements.txt  run_specific.py  run_tests.py
src/: FA.py  FA_dict.py  FA_simple.py  MYEFA.py  __init__.py  fa_factory.py
src/mutations/: FA_dict_mut_01.py  FA_dict_mut_02.py  FA_dict_mut_03.py  FA_dict_mut_04.py  FA_dict_mut_05.py  FA_dict_mut_06.py  FA_simple_mut_01.py  FA_simple_mut_02.py  FA_simple_mut_03.py  FA_simple_mut_04.py  FA_simple_mut_05.py  FA_simple_mut_06.py  FA_simple_mut_07.py  FA_simple_mut_08.py  FA_simple_mut_09.py  FA_simple_mut_10.py  FA_simple_mut_11.py  FA_simple_mut_12.py  __init__.py
tests/: __init__.py  conftest.py
tests/hypothesis/: __init__.py  hypothesis_strategies.py  test_fa_simple_hypothesis.py
tests/hypothesis_strategies/: __init__.py  base_strategies.py  smart_strategies.py
tests/integration/: __init__.py  test_transformations.py
tests/mocks/: __init__.py  mock_efa.py  mock_fa.py
tests/unit/: __init__.py  test_fa.py  test_fa_impl.py  test_fa_model.py  test_fa_simple.py  test_fa_simple_hypothesis.py  test_myefa.py
